# Socket

./: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
Lib/: CMakeLists.txt
Lib/include/: SocketClient.h  SocketServer.h
Lib/src/: SocketClient.cpp  SocketServer.cpp
